--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -5,7 +5,7 @@
       <div>
         <ul style="padding-left: 0;">
           <li style="padding-left: 0;"><a class="our-brand" href="/">Yathit</a></li>
-          <li><span class="muted text-nowrap"><a href="/sugarcrm/">Documentations</a></span></li>
+          <li><span class="muted text-nowrap"><a href="/sugarcrm-gmail/">Documentations</a></span></li>
         </ul>
       </div>
     </nav>
