--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -4,8 +4,8 @@
     <nav class="navbar">
       <div>
         <ul style="padding-left: 0;">
-          <li style="padding-left: 0;"><a class="our-brand" href="/">Yathit</a></li>
-          <li><span class="muted text-nowrap"><a href="/sugarcrm-gmail/">Documentations</a></span></li>
+          <li style="padding-left: 0;"><a class="our-brand" href="https://www.yathit.com/index.html">Yathit</a></li>
+          <li><span class="muted text-nowrap"><a href="https://www.yathit.com/sugarcrm-gmail/index.html">Documentations</a></span></li>
         </ul>
       </div>
     </nav>
