--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,6 +10,10 @@
     <meta name="description" content="{{ page.excerpt || autolink || strip_html }}">
     {% endif %}
 
+
+    <link rel="chrome-webstore-item" href="https://chrome.google.com/webstore/detail/iccdnijlhdogaccaiafdpjmbakdcdakk">
+    <link rel="chrome-webstore-item" href="https://chrome.google.com/webstore/detail/ldikiokclnbceabnlbkabmcacpiednop">
+
     {% stylesheet bootstrap.min %}
 
     {% stylesheet site %}
@@ -32,5 +36,6 @@
       </div>
     </div>
     {% include footer.html %}
+  {% javascript kb-script %}
   </body>
 </html>
