--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -9,8 +9,8 @@
           </p>
           <p>
             <a href="mailto:info@yathit.com">Contact us</a> |
-            <a href="/terms.html">Our user agreement</a> |
-            <a href="/privacy.html">Privacy policy</a>
+            <a href="/terms.html">Terms</a> |
+            <a href="/privacy.html">Privacy</a>
           </p>
         </div>
       </footer>
