--- a/_assets/stylesheets/site.scss
+++ b/_assets/stylesheets/site.scss
@@ -2,7 +2,7 @@
 @import "font-awesome";
 @import "old";
 
-$navbarBackground: #0088cc;
+$navbarBackground: #03C9A9;
 $sepColor: #f5f5f5;
 
 body {
@@ -99,6 +99,9 @@ h2 {
 $bulletSize: 10px;
 
 .content {
+  A {
+    color: #1abc9c;
+  }
   .screenshot {
     margin-left: 1em;
     margin-bottom: 1em;
@@ -250,3 +253,34 @@ footer {
   }
 }
 
+
+/* Bootstrap Modifications */
+.navbar-default {
+  background-color: #ffffff;
+  border-color: transparent;
+  letter-spacing: 1px;
+  text-transform: uppercase;
+  font-size: 11px;
+}
+
+.navbar-default.navbar A:not(.navbar-brand) {
+  font-size: 11px;
+}
+
+.navbar-brand {
+  height: 50px;
+  padding: 15px 15px;
+  font-size: 18px;
+  font-weight: 900;
+  line-height: 20px;
+}
+
+.navbar-default .navbar-brand {
+  color: black;
+}
+
+.navbar-default .navbar-nav > .active > a, .navbar-default .navbar-nav > .active > a:hover, .navbar-default .navbar-nav > .active > a:focus {
+  color: #555;
+  background-color: transparent;
+  border-bottom: 2px solid #e7e7e7;
+}
