--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -1,14 +1,22 @@
 <div class="wrapper">
-<div class="container our-header">
-  <div class="row our-row-mini"><div class="col-sm-12 our-row-mini">
-    <nav class="navbar">
-      <div>
-        <ul style="padding-left: 0;">
-          <li style="padding-left: 0;"><a class="our-brand" href="https://www.yathit.com/index.html">Yathit</a></li>
-          <li><span class="muted text-nowrap"><a href="https://www.yathit.com/sugarcrm-gmail/index.html">Documentations</a></span></li>
+  <div class="navbar navbar-default navbar-fixed-top" role="navigation">
+    <div class="container">
+      <div class="navbar-header">
+        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+          <span class="sr-only">Toggle navigation</span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+        </button>
+        <a class="navbar-brand" href="https://www.yathit.com/index.html">Yathit</a>
+      </div>
+      <div class="collapse navbar-collapse">
+        <ul class="nav navbar-nav navbar-right">
+          <li><a href="/sugarcrm-gmail/saving-inbound-message-to-sugarcrm.html">Archive</a></li>
+          <li><a href="/sugarcrm-gmail/using-sugar-template-in-gmail.html">Template</a></li>
+          <li><a href="/sugarcrm-gmail/sending-tracked-email.html">Track</a></li>
         </ul>
       </div>
-    </nav>
-  </div></div>
-</div>
+    </div>
+  </div>
 </div>
