--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -15,6 +15,7 @@
           <li><a href="/sugarcrm-gmail/saving-inbound-message-to-sugarcrm.html">Archive</a></li>
           <li><a href="/sugarcrm-gmail/using-sugar-template-in-gmail.html">Template</a></li>
           <li><a href="/sugarcrm-gmail/sending-tracked-email.html">Track</a></li>
+          <li><a href="/sugarcrm-gmail/contact-sync.html">Sync</a></li>
         </ul>
       </div>
     </div>
