--- a/_assets/stylesheets/site.scss
+++ b/_assets/stylesheets/site.scss
@@ -284,3 +284,7 @@ footer {
   background-color: transparent;
   border-bottom: 2px solid #e7e7e7;
 }
+
+.button--primary.themed {
+  color: white;
+}
