--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -12,10 +12,10 @@
       </div>
       <div class="collapse navbar-collapse">
         <ul class="nav navbar-nav navbar-right">
-          <li><a href="/sugarcrm-gmail/saving-inbound-message-to-sugarcrm.html">Archive</a></li>
-          <li><a href="/sugarcrm-gmail/using-sugar-template-in-gmail.html">Template</a></li>
-          <li><a href="/sugarcrm-gmail/sending-tracked-email.html">Track</a></li>
-          <li><a href="/sugarcrm-gmail/contact-sync.html">Sync</a></li>
+          <li><a href="https://www.yathit.com/#home">Home</a></li>
+          <li><a href="https://www.yathit.com/#features">Features</a></li>
+          <li><a href="https://www.yathit.com/pricing.html">Pricing</a></li>
+          <li><a href="https://www.yathit.com/sugarcrm-gmail/index.html">Learn</a></li>
         </ul>
       </div>
     </div>
