--- a/_includes/toc.html
+++ b/_includes/toc.html
@@ -1,3 +1,26 @@
+<div class="toc-top">
+  <div class="search-box">
+    <input type="text" name="search"/>
+  </div>
+  <a href="/kb/new-post/">Post a new idea...</a><br/>
+  <a href="/kb/new-question/">Ask a question...</a>
+</div>
+<ul class="toc sections">
+  <li>
+    <span class='section'>Community Discussion</span>
+    <ul class="toc pages">
+      <li>
+        <a href="/kb/?order=modified&type=Idea">New Ideas</a>
+      </li>
+      <li>
+        <a href="/kb/?order=modified&type=Question">Questions</a>
+      </li>
+      <li>
+        <a href="/kb/?type=FAQ">FAQ</a>
+      </li>
+    </ul>
+  </li>
+</ul>
 <ul class="toc sections">
   {% for section in site.data.sections %}
   <li>
