--- a/_layouts/forum.html
+++ b/_layouts/forum.html
@@ -17,25 +17,24 @@
 
     {% stylesheet site %}
 
-    <meta http-equiv="refresh" content="0; url=https://www.yathit.com/kb/" />
   </head>
   <body{% if page.body_class %} class="{{ page.body_class }}"{% endif %}>
-    {% include navbar.html %}
-    <div class="main">
-      <div class="container">
-        <div class="row">
-          <div class="col-sm-3 toc-wrapper">
-            {% include forum-toc.html %}
-          </div>
-          <div class="col-sm-9 content-wrapper">
-            <div class="content">
-              {{ content || autolink }}
-            </div>
+  {% include navbar.html %}
+  <div class="main">
+    <div class="container">
+      <div class="row">
+        <div class="col-sm-3 toc-wrapper">
+          {% include toc.html %}
+        </div>
+        <div class="col-sm-9 content-wrapper">
+          <div class="content">
+            {{CONTENT}}
           </div>
         </div>
       </div>
     </div>
-    {% include footer.html %}
+  </div>
+  {% include footer.html %}
   {% javascript kb-script %}
   </body>
 </html>
