--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -16,6 +16,7 @@
           <li><a href="https://www.yathit.com/#features">Features</a></li>
           <li><a href="https://www.yathit.com/pricing.html">Pricing</a></li>
           <li><a href="https://www.yathit.com/sugarcrm-gmail/index.html">Learn</a></li>
+          <li><a href="#login" id="login">Login</a></li>
         </ul>
       </div>
     </div>
