--- a/_layouts/forum.html
+++ b/_layouts/forum.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+<head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>{{ page.title }}</title>
@@ -17,24 +17,30 @@
 
     {% stylesheet site %}
 
-  </head>
-  <body{% if page.body_class %} class="{{ page.body_class }}"{% endif %}>
-  {% include navbar.html %}
-  <div class="main">
+</head>
+<body
+{% if page.body_class %} class="{{ page.body_class }}"{% endif %}>
+{% include navbar.html %}
+<div class="main">
     <div class="container">
-      <div class="row">
-        <div class="col-sm-3 toc-wrapper">
-          {% include toc.html %}
+        <div class="row">
+            <div class="col-sm-3 toc-wrapper">
+                {% include toc.html %}
+            </div>
+            <div class="col-sm-9 content-wrapper">
+                <div class="content" id="main-content">
+                    {{ content || autolink }}
+                </div>
+                <div class="content" id="search-result">
+                    $SEARCH_RESULT$
+                </div>
+            </div>
         </div>
-        <div class="col-sm-9 content-wrapper">
-          <div class="content">
-            {{CONTENT}}
-          </div>
-        </div>
-      </div>
     </div>
-  </div>
-  {% include footer.html %}
-  {% javascript kb-script %}
-  </body>
+</div>
+</div>
+{% include footer.html %}
+{% javascript jquery %}
+{% javascript kb-script %}
+</body>
 </html>
