--- a/_includes/toc.html
+++ b/_includes/toc.html
@@ -7,7 +7,7 @@
 </div>
 <ul class="toc sections">
   <li>
-    <span class='section'>Community Discussion</span>
+    <span class='section'>Community</span>
     <ul class="toc pages">
       <li>
         <a href="/kb/?order=modified&type=Idea">New Ideas</a>
