--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -40,7 +40,7 @@
     </div>
     {% include footer.html %}
   {% javascript respond.min %}
-  {% javascript jquery %}
+  {% javascript jquery-3.2.1.slim.min %}
   {% javascript kb-script %}
   </body>
 </html>
