--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -8,7 +8,7 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <a class="navbar-brand" href="https://www.yathit.com/index.html">Yathit Support</a>
+        <a class="navbar-brand" href="https://www.yathit.com/sugarcrm-gmail/index.html">Yathit Support</a>
       </div>
       <div class="collapse navbar-collapse">
         <ul class="nav navbar-nav navbar-right">
