--- a/_includes/toc.html
+++ b/_includes/toc.html
@@ -18,6 +18,9 @@
       <li>
         <a href="/kb/?type=FAQ">FAQ</a>
       </li>
+      <li>
+        <a href="/blogs/">Blogs</a>
+      </li>
     </ul>
   </li>
 </ul>
