--- a/_assets/stylesheets/site.scss
+++ b/_assets/stylesheets/site.scss
@@ -347,13 +347,67 @@ UL.post-items {
   padding-left: 0;
 }
 
+.item-row {
+  display: flex;
+  flex-direction: row;
+  margin-bottom: 8px;
+}
+
+.item-row H3 {
+  margin-top: 0;
+}
+
+.item-row .vote-wrapper {
+  width: 80px;
+  display: flex;
+  margin-right: 24px;
+  flex-direction: column;
+  justify-content: center;
+  text-align: center;
+  flex-grow: 0;
+  flex-shrink: 0;
+}
+
+.item-row > * {
+  align-self: flex-start;
+}
+
+.vote-wrapper BUTTON {
+  border-radius: 5px;
+  font-size: 13px;
+  padding: 0 8px;
+  width: 100%;
+  margin-top: 4px;
+  outline: none;
+}
+
+.vote-label {
+  font-size: 70%;
+}
+
+.item-row .vote-panel {
+  width: 80px;
+  height: 64px;
+
+  background-color: #FCFDFF;
+  border: 1px solid #CFD7E6;
+  box-shadow: rgba(0,0,0,0.1) 0 1px 1px;
+  border-radius: 3px;
+  color: #8F9BB3;
+
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  text-align: center;
+}
+
 .item-detail > * {
   padding-right: 8px;
 }
 
 .item-detail {
   color: #666F80;
-  font-size: 90%;
+  font-size: 80%;
 }
 
 .item-content {
