--- a/_assets/stylesheets/site.scss
+++ b/_assets/stylesheets/site.scss
@@ -323,7 +323,7 @@ IFRAME {
 }
 
 .forum-post img {
-  max-width: 790px;
+  width: 100%;
 }
 
 .search-box {
@@ -411,7 +411,7 @@ UL.post-items {
 }
 
 .item-content {
-  max-height: 20em;
+  max-height: 16em;
   overflow: hidden;
   text-overflow: ellipsis;
 }
@@ -463,7 +463,11 @@ UL.post-items {
   margin-top: 16px;
 }
 
-.post-items.FAQ .item-detail {
+.post-items.FAQ .item-detail, .post-items.Blog .vote-wrapper {
+  display: none;
+}
+
+.post-items.Blog .vote-wrapper, .post-items.Question .vote-wrapper {
   display: none;
 }
 
