--- a/_layouts/forum.html
+++ b/_layouts/forum.html
@@ -34,10 +34,7 @@
         </div>
     </div>
 </div>
-</div>
 {% include footer.html %}
-{% javascript respond.min %}
-{% javascript jquery-3.2.1.slim.min %}
-{% javascript kb-script %}
+{% javascript all %}
 </body>
 </html>
