--- a/_includes/toc.html
+++ b/_includes/toc.html
@@ -19,6 +19,9 @@
         <a href="/kb/?type=FAQ">FAQ</a>
       </li>
       <li>
+        <a href="/sugarcrm-gmail/video-playlist.html">Videos</a>
+      </li>
+      <li>
         <a href="/blogs/">Blogs</a>
       </li>
     </ul>
