--- a/_assets/stylesheets/site.scss
+++ b/_assets/stylesheets/site.scss
@@ -79,7 +79,7 @@ body {
   }
 }
 
-h1, h2 {
+h1, h2, h3 {
   font-weight: 700;
   color: #444;
 }
@@ -89,9 +89,14 @@ h1 {
   padding-top: 0;
   margin-bottom: 0.75em;
   font-size: 32px;
+  text-align: center;
 }
 
 h2 {
+  font-size: 26px;
+}
+
+h3 {
   margin-bottom: 1em;
   margin-top: 1em;
   font-size: 22px;
@@ -117,18 +122,18 @@ $bulletSize: 10px;
     font-weight: 100;
     color: #555;
   }
-  counter-reset: h2;
-  h2 {
+  counter-reset: h3;
+  h3 {
     margin: 1em 0em 1em -0.5em;
     padding: 0;
     list-style: none;
     font-weight: bold;
     font-size: 20px;
   }
-  h2:before {
+  h3:before {
     background: $navbarBackground;
-    content: counter(h2);
-    counter-increment: h2;
+    content: counter(h3);
+    counter-increment: h3;
     color: #fff;
     font-size: $bulletSize * 1.5;
     font-weight: bold;
@@ -224,7 +229,7 @@ footer {
 }
 
 .help {
-  h2 {
+  h3 {
     padding-top: 0.15em;
     padding-bottom: 0.20em;
     padding-left: 0.3em;
