--- a/_assets/stylesheets/site.scss
+++ b/_assets/stylesheets/site.scss
@@ -6,7 +6,7 @@ $navbarBackground: #03C9A9;
 $sepColor: #f5f5f5;
 
 body {
-  font-family: "franklin-gothic-urw", sans-serif;
+  font-family: sans-serif;
   background-color: #f3f3f3;
 }
 
