--- a/_includes/toc.html
+++ b/_includes/toc.html
@@ -1,6 +1,6 @@
 <div class="toc-top">
   <div class="search-box">
-    <input type="text" name="search"/>
+    <input type="text" name="search" class="search"/>
   </div>
   <a href="/kb/new-post/">Post a new idea...</a><br/>
   <a href="/kb/new-question/">Ask a question...</a>
