--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -1,13 +1,49 @@
----
-layout: default
----
-<div class="clearfix">
-  <div class="github-edit pull-right">
-    {% include github-edit.html %}
-  </div>
-  <h1>{{ page.title }}</h1>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>{{ page.title }}</title>
+    {% if page.meta_description %}
+    <meta name="description" content="{{ page.meta_description }}">
+    {% else %}
+    <meta name="description" content="{{ page.excerpt || autolink || strip_html }}">
+    {% endif %}
+
+
+    <link rel="chrome-webstore-item" href="https://chrome.google.com/webstore/detail/iccdnijlhdogaccaiafdpjmbakdcdakk">
+    <link rel="chrome-webstore-item" href="https://chrome.google.com/webstore/detail/ldikiokclnbceabnlbkabmcacpiednop">
+
+    {% stylesheet site %}
+
+</head>
+<body {% if page.body_class %} class="{{ page.body_class }}"{% endif %}>
+{% include navbar.html %}
+<div class="main">
+    <div class="container">
+        <div class="row">
+            <div class="col-sm-3 toc-wrapper">
+                {% include toc.html %}
+            </div>
+            <div class="col-sm-9 content-wrapper">
+
+                <div class="content" id="main-content">
+                    <div class="clearfix">
+                        <div class="github-edit pull-right">
+                            {% include github-edit.html %}
+                        </div>
+                        <h1>{{ page.title }}</h1>
+                    </div>
+                    {{ content || autolink }}
+                </div>
+                <div class="content" id="search-result">
+
+                </div>
+            </div>
+        </div>
+    </div>
 </div>
-
-{{ content }}
-
-{% include paginator.html %}
+{% include footer.html %}
+{% javascript all %}
+</body>
+</html>
