--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -8,11 +8,13 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <a class="navbar-brand" href="https://www.yathit.com/sugarcrm-gmail/index.html">Yathit Support</a>
+        <a class="navbar-brand" href="https://www.yathit.com/index.html">Yathit</a>
       </div>
       <div class="collapse navbar-collapse">
         <ul class="nav navbar-nav navbar-right">
-          <li><a href="https://www.yathit.com/#home">Home</a></li>
+          <li><a href="https://www.yathit.com/pricing.html">Pricing</a></li>
+          <li><a href="https://www.yathit.com/sugarcrm-gmail/tutorial-videos.html">Video</a></li>
+          <li><a href="https://www.yathit.com/sugarcrm-gmail/index.html">Learn</a></li>
           <li><a href="#login" id="login">Login</a></li>
         </ul>
       </div>
