--- a/_assets/stylesheets/site.scss
+++ b/_assets/stylesheets/site.scss
@@ -4,10 +4,11 @@
 @import "old";
 
 $navbarBackground: #03C9A9;
+$hightLight: #1abc9c;
 $sepColor: #f5f5f5;
 
 body {
-  font-family: sans-serif;
+  font-family: 'Lato', sans-serif;
   background-color: #f3f3f3;
 }
 
@@ -110,7 +111,7 @@ $bulletSize: 10px;
 
 .content {
   A {
-    color: #1abc9c;
+    color: $hightLight;
   }
   .screenshot {
     margin-left: 1em;
@@ -122,8 +123,8 @@ $bulletSize: 10px;
   }
   p, li {
     font-size: 18px;
-    line-height: 18*1.2727px;
-    font-weight: 100;
+    line-height: 28px;
+    font-weight: 300;
     color: #555;
   }
   counter-reset: h3;
@@ -164,7 +165,7 @@ $bulletSize: 10px;
     font-size: 14px;
     color: #555;
     text-decoration: none;
-    font-weight: 100;
+    font-weight: 300;
   }
   .active {
     color: #000;
@@ -205,7 +206,7 @@ footer {
   p, li {
     font-size: 22px;
     line-height: 28px;
-    font-weight: 100;
+    font-weight: 300;
   }
 }
 .navbar {
