--- a/_assets/stylesheets/site.scss
+++ b/_assets/stylesheets/site.scss
@@ -8,7 +8,7 @@ $hightLight: #1abc9c;
 $sepColor: #f5f5f5;
 
 body {
-  font-family: 'Lato', sans-serif;
+  font-family: 'Arial', sans-serif;
   background-color: #f3f3f3;
 }
 
