--- a/_assets/stylesheets/site.scss
+++ b/_assets/stylesheets/site.scss
@@ -6,9 +6,9 @@
 $navbarBackground: #03C9A9;
 $hightLight: #1abc9c;
 $sepColor: #f5f5f5;
+$bodyFontWeight: normal;
 
 body {
-  font-family: 'Arial', sans-serif;
   background-color: #f3f3f3;
 }
 
@@ -124,7 +124,7 @@ $bulletSize: 10px;
   p, li {
     font-size: 18px;
     line-height: 28px;
-    font-weight: 300;
+    font-weight: $bodyFontWeight;
     color: #555;
   }
   counter-reset: h3;
@@ -165,7 +165,7 @@ $bulletSize: 10px;
     font-size: 14px;
     color: #555;
     text-decoration: none;
-    font-weight: 300;
+    font-weight: $bodyFontWeight;
   }
   .active {
     color: #000;
@@ -206,7 +206,7 @@ footer {
   p, li {
     font-size: 22px;
     line-height: 28px;
-    font-weight: 300;
+    font-weight: $bodyFontWeight;
   }
 }
 .navbar {
