--- a/_assets/stylesheets/site.scss
+++ b/_assets/stylesheets/site.scss
@@ -2,6 +2,7 @@
 @import "font-awesome";
 @import "bootstrap.min";
 @import "old";
+@import "km-toc";
 
 $navbarBackground: #03C9A9;
 $hightLight: #1abc9c;
