--- a/_assets/stylesheets/site.scss
+++ b/_assets/stylesheets/site.scss
@@ -128,6 +128,10 @@ $bulletSize: 10px;
     font-weight: $bodyFontWeight;
     color: #555;
   }
+  p.small {
+    font-size: 14px;
+    line-height: 20px;
+  }
   counter-reset: h3;
   h3 {
     margin: 1em 0em 1em -0.5em;
