--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -8,9 +8,12 @@
             Yathit &copy; 2017 | 683A Jurong West Central 1, #09-118 Singapore 641683
           </p>
           <p>
-            <a href="mailto:info@yathit.com">Contact us</a> |
-            <a href="/terms.html">Terms</a> |
-            <a href="/privacy.html">Privacy</a>
+            <a href="https://www.yathit.com/index.html">Yathit</a> |
+            <a href="https://www.yathit.com/sugarcrm-gmail/index.html">Support</a> |
+            <a href="https://www.yathit.com/blogs/">Blogs</a> |
+            <a href="https://www.yathit.com/privacy.html">Privacy</a> |
+            <a href="https://www.yathit.com/security.html">Security</a> |
+            <a href="https://www.yathit.com/terms.html">Terms</a>
           </p>
         </div>
       </footer>
