--- a/_assets/stylesheets/site.scss
+++ b/_assets/stylesheets/site.scss
@@ -29,7 +29,7 @@ body {
 @media (max-width: 767px) {
   .main {
     padding: 10px 25px;
-    margin-top: 0.5em;
+    margin-top: 3.2em;
   }
   body {
     background-color: #fff;
@@ -671,4 +671,18 @@ TABLE.playlist TD:last-child {
   margin: 0;
   padding: 0;
   line-height: 22px;
+}
+
+.videoWrapper {
+  position: relative;
+  padding-bottom: 56.25%; /* 16:9 */
+  padding-top: 25px;
+  height: 0;
+}
+.videoWrapper iframe {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
 }
