css for float image.

--- a/_assets/stylesheets/site.scss
+++ b/_assets/stylesheets/site.scss
@@ -337,10 +337,6 @@ IFRAME {
   margin-top: 4px;
 }
 
-.forum-post img {
-  width: 100%;
-}
-
 .search-box {
   margin-bottom: 8px;
 }
@@ -689,4 +685,18 @@ TABLE.playlist TD:last-child {
 
 .content-wrapper P > IMG {
   max-width: 100%;
+}
+
+IMG[alt="left-float-image"] {
+  float: left;
+  margin-right: 16px;
+}
+
+IMG[alt="right-float-image"] {
+  float: right;
+  margin-left: 16px;
+}
+
+.forum-post .post-content P {
+  text-align: justify;
 }
