--- a/_layouts/forum.html
+++ b/_layouts/forum.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="theme-color" content="#03C9A9">
     <title>{{ page.title }}</title>
     <meta name="description" content="Yathit knowledgebase">
     {% raw %}
