--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="theme-color" content="#03C9A9">
     <title>{{ page.title }}</title>
     {% if page.meta_description %}
     <meta name="description" content="{{ page.meta_description }}">
