--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -12,9 +12,9 @@
       </div>
       <div class="collapse navbar-collapse">
         <ul class="nav navbar-nav navbar-right">
-          <li><a href="https://www.yathit.com/pricing.html">Pricing</a></li>
-          <li><a href="https://www.yathit.com/sugarcrm-gmail/tutorial-videos.html">Learn</a></li>
-          <li><a href="https://www.yathit.com/sugarcrm-gmail/index.html">Support</a></li>
+          <li><a href="/pricing.html">Pricing</a></li>
+          <li><a href="/sugarcrm-gmail/tutorial-videos.html">Learn</a></li>
+          <li><a href="/sugarcrm-gmail/index.html">Support</a></li>
           <li><a href="#login" id="login">Login</a></li>
         </ul>
       </div>
