--- a/_layouts/forum.html
+++ b/_layouts/forum.html
@@ -12,6 +12,7 @@
 
     <link rel="chrome-webstore-item" href="https://chrome.google.com/webstore/detail/iccdnijlhdogaccaiafdpjmbakdcdakk">
     <link rel="chrome-webstore-item" href="https://chrome.google.com/webstore/detail/ldikiokclnbceabnlbkabmcacpiednop">
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-114586412-1"></script>
 
     {% stylesheet site %}
 
