--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -12,10 +12,26 @@
       </div>
       <div class="collapse navbar-collapse">
         <ul class="nav navbar-nav navbar-right">
+          <li><a href="/index.html">Home</a></li>
+          <li>
+            <a href="#">Products</a>
+            <ul class="ydn-hover-menu">
+              <li>
+                <a href="/sugarcrm-gmail.html">Yathit Chrome Extension</a>
+              </li>
+              <li>
+                <a class="ydn-mobile-app-link" title="Yathit Mobile App for Sugar/SuiteCRM"
+                   href="/suitecrm-mobile-app.html">
+                 Yathit Mobile App
+                </a>
+              </li>
+            </ul>
+          </li>
           <li><a href="/pricing.html">Pricing</a></li>
-          <li><a href="/sugarcrm-gmail/tutorial-videos.html">Learn</a></li>
-          <li><a href="/sugarcrm-gmail/index.html">Support</a></li>
           <li><a href="#login" id="login">Login</a></li>
+          <li>
+            <a href="#h" class="btn btn-primary btn-download">Download</a>
+          </li>
         </ul>
       </div>
     </div>
