--- a/_assets/stylesheets/site.scss
+++ b/_assets/stylesheets/site.scss
@@ -724,6 +724,11 @@ LI.post-item.Deleted {
 }
 
 
+.width466 {
+  width: 466px;
+}
+
+
 ul.ydn-hover-menu li {
   display: block;
   min-width: 20em;
@@ -765,6 +770,7 @@ ul.ydn-hover-menu li:hover {
   color: black;
   font-weight: bold;
 }
+
 
 .navbar-nav > li > a.btn-download {
   padding-top: 4px;
