--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -27,6 +27,13 @@
               </li>
             </ul>
           </li>
+          <li>
+            <a href="#">Resource</a>
+            <ul class="ydn-hover-menu">
+              <li><a href="/sugarcrm-gmail/index.html">Yathit Chrome Extension</a></li>
+              <li><a href="/sugar-mobile-app/index.html">Yathit Mobile App</a></li>
+            </ul>
+          </li>
           <li><a href="/pricing.html">Pricing</a></li>
           <li><a href="#login" id="login">Login</a></li>
           <li>
