--- a/_includes/toc.html
+++ b/_includes/toc.html
@@ -2,21 +2,21 @@
   <div class="search-box">
     <input type="text" name="search" class="search"/>
   </div>
-  <a href="/kb/new-post/">Post a new idea...</a><br/>
-  <a href="/kb/new-question/">Ask a question...</a>
+  <a href="/xkb/new-post/">Post a new idea...</a><br/>
+  <a href="/xkb/new-question/">Ask a question...</a>
 </div>
 <ul class="toc sections">
   <li>
     <span class='section'>Community</span>
     <ul class="toc pages">
       <li>
-        <a href="/kb/?order=modified&type=Idea">New Ideas</a>
+        <a href="/xkb/?order=modified&type=Idea">New Ideas</a>
       </li>
       <li>
-        <a href="/kb/?order=modified&type=Question">Questions</a>
+        <a href="/xkb/?order=modified&type=Question">Questions</a>
       </li>
       <li>
-        <a href="/kb/?type=FAQ">FAQ</a>
+        <a href="/xkb/?type=FAQ">FAQ</a>
       </li>
       <li>
         <a href="/sugarcrm-gmail/tutorial-videos.html">Videos</a>
