--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -14,7 +14,7 @@
 
     <link rel="chrome-webstore-item" href="https://chrome.google.com/webstore/detail/iccdnijlhdogaccaiafdpjmbakdcdakk">
     <link rel="chrome-webstore-item" href="https://chrome.google.com/webstore/detail/ldikiokclnbceabnlbkabmcacpiednop">
-    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-114586412-1"></script>
+    <script async src="https://www.yathit.com/t/yathit.js"></script>
 
     {% stylesheet site %}
 
