--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -41,7 +41,7 @@
           <li><a href="/pricing.html">Pricing</a></li>
           <li><a href="#login" id="login">Login</a></li>
           <li>
-            <a href="#h" class="btn btn-primary btn-download">Download</a>
+            <a href="#h" class="btn btn-primary btn-download">Install</a>
           </li>
         </ul>
       </div>
