--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -38,7 +38,7 @@
               <li><a href="/gmail-addon/index.html">Yathit Gmail Addon</a></li>
             </ul>
           </li>
-          <li><a href="/pricing.html">Pricing</a></li>
+          <li style="display: none;"><a href="/pricing.html">Pricing</a></li>
           <li><a href="#login" id="login">Login</a></li>
           <li>
             <a href="#h" class="btn btn-primary btn-download">Install</a>
