--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -31,7 +31,7 @@
             </ul>
           </li>
           <li>
-            <a href="#">Resource</a>
+            <a href="#">Documentation</a>
             <ul class="ydn-hover-menu">
               <li><a href="/sugar-mobile-app/index.html">Yathit Mobile App</a></li>
               <li><a href="/sugarcrm-gmail/index.html">Yathit Chrome Extension</a></li>
