--- a/_includes/toc.html
+++ b/_includes/toc.html
@@ -19,7 +19,7 @@
         <a href="/xkb/?type=FAQ">FAQ</a>
       </li>
       <li>
-        <a href="/sugarcrm-gmail/tutorial-videos.html">Videos</a>
+        <a href="/sugarcrm-gmail/tutorial-videos.html">Tutorial Videos</a>
       </li>
       <li>
         <a href="/blogs/">Blogs</a>
